terraform/security.tf
resource "aws_security_group" "rds_sg" {
  name   = "etl-rds-sg"
  vpc_id = aws_vpc.etl_vpc.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
